<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Airliners</string>

    <!-- buttons -->
    <string name="button_ok">OK</string>

    <!-- tabs -->
    <string name="tab_top15_title">TOP 15</string>
    <string name="tab_top_title">TOP</string>
    <string name="tab_search_title">Search</string>

    <!-- aircraft info -->
    <string name="aircraft_info_photo_title">Photo</string>
    <string name="aircraft_info_airline_title">Airline</string>
    <string name="aircraft_info_aircraft_title">Aircraft</string>
    <string name="aircraft_info_taken_at_title">Taken At</string>
    <string name="aircraft_info_taken_on_title">Taken On</string>
    <string name="aircraft_info_reg_title">Registration</string>
    <string name="aircraft_info_author_title">Author</string>
    <string name="aircraft_info_remark_title">Remark</string>

    <!-- actions -->
    <string name="action_set_wallpaper">Set as wallpaper&#8230;</string>
    <string name="action_share">Share&#8230;</string>

    <!-- search -->
    <string name="search_group_aircraft">Aircraft</string>
    <string name="search_group_location_date">Location &amp; Date</string>
    <string name="search_group_identity">Identity</string>
    <string name="search_group_other">Other</string>

    <string name="search_param_aircraft_hint">Aircraft Type/Version</string>
    <string name="search_param_airline_hint">Airline or other owner</string>
    <string name="search_param_place_hint">Airport or other location</string>
    <string name="search_param_country_hint">Country or State/Province for USA/Canada</string>
    <string name="search_param_date_hint">Date photo was shot</string>
    <string name="search_param_year_hint">Year the photo was taken</string>
    <string name="search_param_reg_hint">Aircraft registration number</string>
    <string name="search_param_cn_hint">Aircraft cn</string>
    <string name="search_param_code_hint">Aircraft code</string>
    <string name="search_param_remark_hint">Remark field</string>

    <string name="search_button_go_title">Search</string>
    <string name="search_button_clear_title">Clear</string>

    <string name="search_empty_params_toast">Please fill at least one field!</string>

    <!-- search no results -->
    <string name="search_no_results_title">Sorry, no results.</string>
    <string name="search_no_results_line1">Can\'t find what you\'re looking for?</string>
    <string name="search_no_results_line2">- Check your spelling.</string>
    <string name="search_no_results_line3">- Try to describe the objectives in fewer words.</string>

    <!-- search errors -->
    <string name="search_failed_network_unavailable">Network unavailable. Please check your device settings.</string>
    <string name="search_failed_service_unavailable">Service is temporarily unavailable. Please try again later.</string>

    <!-- content descriptions -->
    <string name="content_desc_prev_btn">Previous</string>
    <string name="content_desc_next_btn">Next</string>
    <string name="content_desc_aircraft_photo">Aircraft photo</string>

    <!-- errors -->
    <string name="error_network_unavailable">Network unavailable. Please check your device settings.</string>
    <string name="error_photo_loading">Photo can\'t be loaded at this time. Please try again later.</string>
    <string name="error_aircraft_loading">Aircraft info can\'t be loaded at this time. Please try again later.</string>

</resources>