<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:paddingLeft="3dp"
             android:paddingRight="3dp">

    <ProgressBar
            android:id="@+id/aircraft_info_progress_bar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"/>

    <ScrollView
            android:id="@+id/aircraft_info_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:id="@+id/aircraft_info_layout"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_photo_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <FrameLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent">

                <ProgressBar
                        android:id="@+id/aircraft_info_photo_progress_bar"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"/>

                <ImageView
                        android:id="@+id/aircraft_info_photo_view"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"/>

            </FrameLayout>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_airline_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_airline"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_aircraft_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_aircraft"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_taken_at_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_taken_at"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_taken_on_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_taken_on"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_reg_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_registration"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_author_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_author"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

            <TextView
                    android:id="@+id/aircraft_info_remark_title"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/aircraft_info_remark_title"
                    style="@style/AircraftItemAttributesGroupHeader"/>

            <TextView
                    android:id="@+id/aircraft_info_remark"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/AircraftItemAttributeText"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>